--- a/TwitterClient/views/Base.lproj/Main.storyboard
+++ b/TwitterClient/views/Base.lproj/Main.storyboard
@@ -21,19 +21,42 @@
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uoY-FI-JXT">
                                 <rect key="frame" x="168" y="453" width="38" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Login"/>
+                                <state key="normal" title="Login">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
-                                    <segue destination="VdD-sE-fq8" kind="show" id="Ed1-dF-mmw"/>
+                                    <action selector="attemptSignIn:" destination="BYZ-38-t0r" eventType="primaryActionTriggered" id="hbn-8c-2t5"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="gebruikersnaam" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="b9Y-dC-SK5">
+                                <rect key="frame" x="106" y="227" width="162" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" hint="gebruikersnaam"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="wachtwoord" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WQA-e5-Xf4">
+                                <rect key="frame" x="106" y="301" width="162" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <accessibility key="accessibilityConfiguration" hint="wachtwoord"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.0" green="0.67450980390000004" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="txtPassword" destination="WQA-e5-Xf4" id="pBS-ch-9XW"/>
+                        <outlet property="txtUsername" destination="b9Y-dC-SK5" id="HJz-jF-DEH"/>
+                        <segue destination="VdD-sE-fq8" kind="show" identifier="signInSuccess" id="HOv-kQ-GOA"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1" y="29"/>
+            <point key="canvasLocation" x="-2.3999999999999999" y="28.335832083958024"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ytx-hW-wG7">
@@ -89,7 +112,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="ahC-Sn-pJT"/>
                     </view>
-                    <navigationItem key="navigationItem" id="cZd-uj-se8"/>
+                    <navigationItem key="navigationItem" title="Overzicht" id="cZd-uj-se8"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e3r-KT-dtn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
