--- a/TwitterClient/views/Base.lproj/Main.storyboard
+++ b/TwitterClient/views/Base.lproj/Main.storyboard
@@ -78,7 +78,7 @@
         <!--Overview-->
         <scene sceneID="44X-xM-4KA">
             <objects>
-                <viewController title="Overview" id="4XV-W2-hSI" sceneMemberID="viewController">
+                <viewController title="Overview" id="4XV-W2-hSI" customClass="OverViewController" customModule="TwitterClient" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Z7-T0-ghm">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
