--- a/TwitterClient/views/Base.lproj/Main.storyboard
+++ b/TwitterClient/views/Base.lproj/Main.storyboard
@@ -88,18 +88,22 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="u99-8z-3gO">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="TweetTableViewCell" rowHeight="50" id="u99-8z-3gO">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="u99-8z-3gO" id="yT3-b9-Vrt">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="49.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <segue destination="dA6-md-vM0" kind="show" id="zoi-Rh-JQi"/>
+                                            <segue destination="dA6-md-vM0" kind="show" identifier="showDetailViewController" id="zoi-Rh-JQi"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="4XV-W2-hSI" id="bgJ-yf-i33"/>
+                                    <outlet property="delegate" destination="4XV-W2-hSI" id="gsX-2H-sH0"/>
+                                </connections>
                             </tableView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vaa-Bd-grB">
                                 <rect key="frame" x="16" y="72" width="343" height="30"/>
@@ -159,18 +163,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="whc-3Q-gbI">
-                                <rect key="frame" x="16" y="519" width="343" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </tableView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNi-MD-MPx">
-                                <rect key="frame" x="16" y="490" width="343" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="zQp-QQ-ExQ"/>
@@ -178,8 +170,6 @@
                     <connections>
                         <outlet property="createdAtLabel" destination="gwu-UN-ZwX" id="s9y-I1-dHH"/>
                         <outlet property="createdAtText" destination="7eP-0S-KXB" id="MBz-8r-a9h"/>
-                        <outlet property="hashtagLabel" destination="mNi-MD-MPx" id="YNj-jQ-dwN"/>
-                        <outlet property="hashtagTableView" destination="whc-3Q-gbI" id="F1e-oF-aZa"/>
                         <outlet property="textLabel" destination="pQE-Pq-5JD" id="dHE-zO-Ong"/>
                         <outlet property="textView" destination="v1G-N6-hi8" id="GrT-Ck-zm3"/>
                     </connections>
@@ -215,7 +205,7 @@
                                         </connections>
                                     </textField>
                                     <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="c9S-Ko-afF">
-                                        <rect key="frame" x="0.0" y="50" width="375" height="216"/>
+                                        <rect key="frame" x="0.0" y="50.5" width="375" height="216"/>
                                         <connections>
                                             <outlet property="dataSource" destination="DdF-FE-oTI" id="Xg5-qa-bt8"/>
                                             <outlet property="delegate" destination="DdF-FE-oTI" id="KH3-54-Es2"/>
