--- a/TwitterClient/views/Base.lproj/Main.storyboard
+++ b/TwitterClient/views/Base.lproj/Main.storyboard
@@ -158,7 +158,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yZ3-p2-olK">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="yZ3-p2-olK">
                                 <rect key="frame" x="0.0" y="119" width="375" height="667"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
@@ -179,39 +179,106 @@
                                     <outlet property="delegate" destination="4XV-W2-hSI" id="gsX-2H-sH0"/>
                                 </connections>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vaa-Bd-grB">
-                                <rect key="frame" x="10" y="72" width="100" height="30"/>
-                                <state key="normal" title="Settings"/>
-                                <connections>
-                                    <segue destination="DdF-FE-oTI" kind="show" identifier="showSettingsViewController" id="MWe-nI-koG"/>
-                                </connections>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7QH-UZ-Gyz" userLabel="Sign out Button">
-                                <rect key="frame" x="266" y="72" width="100" height="30"/>
-                                <state key="normal" title="Sign-out"/>
-                                <connections>
-                                    <action selector="btnSignOutPressed:" destination="4XV-W2-hSI" eventType="primaryActionTriggered" id="AWH-ek-2I3"/>
-                                </connections>
-                            </button>
+                            <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6zV-8z-K0v" userLabel="Menu View">
+                                <rect key="frame" x="0.0" y="64" width="375" height="559"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NW6-nM-THA" userLabel="Inner View">
+                                        <rect key="frame" x="0.0" y="0.0" width="240" height="559"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="BNE-pA-yey">
+                                                <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
+                                                <subviews>
+                                                    <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i2A-yP-a1c" userLabel="Profiel">
+                                                        <rect key="frame" x="0.0" y="-64" width="240" height="0.0"/>
+                                                        <state key="normal" title="Profiel">
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
+                                                    </button>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eX6-qU-pIw" userLabel="Settings">
+                                                        <rect key="frame" x="0.0" y="0.0" width="240" height="40"/>
+                                                        <state key="normal" title="Settings">
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
+                                                        <connections>
+                                                            <segue destination="DdF-FE-oTI" kind="show" id="Y8d-pz-IYJ"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                                <color key="backgroundColor" red="0.0" green="0.67450980390000004" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="40" id="Imt-Lq-DHq"/>
+                                                </constraints>
+                                            </stackView>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.0" green="0.67450980390000004" blue="0.92941176469999998" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="BNE-pA-yey" firstAttribute="leading" secondItem="NW6-nM-THA" secondAttribute="leading" id="2jx-py-jgy"/>
+                                            <constraint firstItem="BNE-pA-yey" firstAttribute="trailing" secondItem="NW6-nM-THA" secondAttribute="trailing" id="ACe-Zu-T9n"/>
+                                            <constraint firstItem="BNE-pA-yey" firstAttribute="top" secondItem="NW6-nM-THA" secondAttribute="top" id="LFE-Uh-cIX"/>
+                                            <constraint firstAttribute="width" constant="240" id="WWs-e5-EST"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gBt-ve-tP4" userLabel="Outside View">
+                                        <rect key="frame" x="240" y="0.0" width="135" height="559"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vhz-hf-4jx" userLabel="Uitloggen">
+                                        <rect key="frame" x="0.0" y="509" width="240" height="40"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="240" id="xzM-kj-BNW"/>
+                                            <constraint firstAttribute="height" constant="40" id="yOh-2A-Xxs"/>
+                                        </constraints>
+                                        <state key="normal" title="Uitloggen">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="btnSignOutPressed:" destination="4XV-W2-hSI" eventType="primaryActionTriggered" id="0Tg-hc-07M"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="gBt-ve-tP4" firstAttribute="top" secondItem="6zV-8z-K0v" secondAttribute="top" id="0il-Gx-mTL"/>
+                                    <constraint firstItem="gBt-ve-tP4" firstAttribute="bottom" secondItem="6zV-8z-K0v" secondAttribute="bottom" id="3cC-dK-iwI"/>
+                                    <constraint firstItem="NW6-nM-THA" firstAttribute="bottom" secondItem="6zV-8z-K0v" secondAttribute="bottom" id="9at-Si-BSC"/>
+                                    <constraint firstItem="gBt-ve-tP4" firstAttribute="trailing" secondItem="6zV-8z-K0v" secondAttribute="trailing" id="NVr-3T-mHb"/>
+                                    <constraint firstItem="NW6-nM-THA" firstAttribute="top" secondItem="6zV-8z-K0v" secondAttribute="top" id="PRX-Le-Lvc"/>
+                                    <constraint firstItem="gBt-ve-tP4" firstAttribute="leading" secondItem="NW6-nM-THA" secondAttribute="trailing" id="c7v-4y-bRw"/>
+                                    <constraint firstItem="vhz-hf-4jx" firstAttribute="bottom" secondItem="6zV-8z-K0v" secondAttribute="bottom" constant="-10" id="cQA-FU-sgH"/>
+                                    <constraint firstItem="NW6-nM-THA" firstAttribute="leading" secondItem="6zV-8z-K0v" secondAttribute="leading" id="qM9-IM-6dc"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="yZ3-p2-olK" firstAttribute="top" secondItem="Vaa-Bd-grB" secondAttribute="bottom" constant="17" id="3qe-Ux-fZq"/>
-                            <constraint firstItem="yZ3-p2-olK" firstAttribute="top" secondItem="Vaa-Bd-grB" secondAttribute="bottom" constant="17" id="5RO-jX-es8"/>
-                            <constraint firstItem="Vaa-Bd-grB" firstAttribute="leading" secondItem="ahC-Sn-pJT" secondAttribute="leading" constant="10" id="9ue-9H-bCi"/>
-                            <constraint firstItem="7QH-UZ-Gyz" firstAttribute="trailing" secondItem="ahC-Sn-pJT" secondAttribute="trailing" constant="-10" id="CUU-xU-dt8"/>
+                            <constraint firstItem="6zV-8z-K0v" firstAttribute="top" secondItem="ahC-Sn-pJT" secondAttribute="top" id="Fsx-In-dSQ"/>
+                            <constraint firstItem="6zV-8z-K0v" firstAttribute="bottom" secondItem="ahC-Sn-pJT" secondAttribute="bottom" id="OYi-c2-4wD"/>
                             <constraint firstItem="yZ3-p2-olK" firstAttribute="width" secondItem="0Z7-T0-ghm" secondAttribute="width" id="QqT-ty-QOH"/>
                             <constraint firstItem="yZ3-p2-olK" firstAttribute="centerX" secondItem="ahC-Sn-pJT" secondAttribute="centerX" id="Tye-Y7-TkW"/>
-                            <constraint firstItem="Vaa-Bd-grB" firstAttribute="top" secondItem="ahC-Sn-pJT" secondAttribute="top" constant="8" id="WgQ-LE-sp0"/>
-                            <constraint firstItem="7QH-UZ-Gyz" firstAttribute="top" secondItem="ahC-Sn-pJT" secondAttribute="top" constant="8" id="af6-xf-l4j"/>
+                            <constraint firstItem="6zV-8z-K0v" firstAttribute="trailing" secondItem="ahC-Sn-pJT" secondAttribute="trailing" id="bU8-jK-Hbd"/>
                             <constraint firstItem="yZ3-p2-olK" firstAttribute="height" secondItem="0Z7-T0-ghm" secondAttribute="height" id="gzc-z1-DMt"/>
+                            <constraint firstItem="6zV-8z-K0v" firstAttribute="leading" secondItem="ahC-Sn-pJT" secondAttribute="leading" id="yzJ-ee-imD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ahC-Sn-pJT"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Overzicht" id="cZd-uj-se8"/>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Overzicht" id="cZd-uj-se8">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="ego-le-A3n">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="z9B-Cg-Bvi" userLabel="Menu">
+                                <rect key="frame" x="16" y="7" width="83" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Menu"/>
+                                <connections>
+                                    <action selector="btnMenuPressed:" destination="4XV-W2-hSI" eventType="primaryActionTriggered" id="caP-lt-XHg"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="settingsButton" destination="Vaa-Bd-grB" id="SMQ-xp-Q53"/>
-                        <outlet property="signOutButton" destination="7QH-UZ-Gyz" id="RiN-Uq-G2K"/>
+                        <outlet property="menuView" destination="6zV-8z-K0v" id="QfW-Hm-lLe"/>
+                        <outlet property="outsideMenuView" destination="gBt-ve-tP4" id="qi7-Bh-8ZN"/>
+                        <outlet property="settingsButton" destination="eX6-qU-pIw" id="Toh-z5-fYe"/>
+                        <outlet property="signOutButton" destination="vhz-hf-4jx" id="cEr-WY-EVx"/>
                         <outlet property="tableView" destination="yZ3-p2-olK" id="Chg-Vo-tzM"/>
                     </connections>
                 </viewController>
